Change center to fort mckay alberta

--- a/index.html
+++ b/index.html
@@ -250,8 +250,7 @@
             var osmUrl = 'http://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png',
                     osmAttrib = '&copy; <a href="http://openstreetmap.org/copyright">OpenStreetMap</a> contributors',
                     osm = L.tileLayer(osmUrl, {maxZoom: 18, attribution: osmAttrib}),
-                    map = new L.Map('map', {zoomControl:false, layers: [osm], center: new L.LatLng(45.424721
-        , -75.695000), zoom: 15,selectedPathOptions: {
+                    map = new L.Map('map', {zoomControl:false, layers: [osm], center: new L.LatLng(57.27268094792591, -111.5815661012755), zoom: 15,selectedPathOptions: {
                 color:'#ff9900'
                 }});
         
